# django-csp-helpers

./: CHANGELOG.md  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
csp_helpers/: __init__.py  apps.py  classes.py  mixins.py  utils.py  wrappers.py
csp_helpers/templatetags/: media_csp.py  render_bundle_csp.py
