[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-csp-helpers"
dynamic = ["version"]
description = "A set of template tags (and mixins!) to assist in building CSP-enabled websites."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Luke Rogers", email = "luke@dmptr.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.2",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=4.2",
]

[tool.hatch.version]
path = "csp_helpers/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["csp_helpers"]

[project.urls]
Homepage = "https://github.com/dmptrluke/django-csp-helpers"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = [
    "node_modules",
    "build",
]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort
    "UP",        # pyupgrade
    "DJ",        # flake8-django
    "A",         # flake8-builtins
    "B",         # flake8-bugbear
    "C4",        # flake8-comprehensions
    "SIM",       # flake8-simplify
    "RUF",       # ruff-specific
    "PIE",       # flake8-pie
]
ignore = [
    "RUF012",  # mutable class attrs (false positive for Django)
    "SIM108",  # ternary operator
    "SIM103",  # return condition directly
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "django", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"django" = ["django"]
